<resources>
    <string name="app_name">Invest Wallet</string>
    <string name="title">My Wallet</string>
    <string name="action">Action</string>
    <string name="refresh">Refresh</string>
    <string name="titleAccount">Title Account</string>
    <string name="descriptionAccount">Description Account</string>
    <string name="remove">Remove</string>
    <string name="change">Change</string>
    <string name="currency">Currency</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="newAccount">New account</string>
    <string name="note">Note</string>
    <string name="menu">Menu</string>
    <string name="descriptionApp">Reliable tool for investment control</string>
    <string name="addNewAccount">Open</string>
    <string name="descriptionNewAccount">Open a new account for investments in currency, real estate, cars, etc.</string>
    <string name="importText">Import</string>
    <string name="importTextDescription">Restore the device memory database</string>
    <string name="exportText">Export</string>
    <string name="exportTextDescription">Save the database to the device memory</string>
    <string name="typeAccount">Type account</string>

    <string name="BANK_DEPOSIT">Bank deposit</string>
    <string name="PROPERTY">Property</string>
    <string name="AUTOMOBILE">Automobile</string>
    <string name="OTHER">Other</string>
    <string name="add">Add payment</string>
    <string name="addExpense">Add expense</string>
    <string name="transfer">Between accounts</string>
    <string name="ChooseAccount">Choose an account</string>
    <string name="AmountPayment">Amount of payment</string>
    <string name="exchangeRates">Exchange Rates</string>
    <string name="accounts">Accounts</string>
    <string name="ChooseAccountForDebit">Select an account to debit</string>
    <string name="ChooseAccountForDeposit">Choose an account to deposit</string>
    <string name="profit">Profit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="AmountExpense">Amount expense</string>



    BANK_DEPOSIT


</resources>