<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomMenuVerticalLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_8"
    >


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/removeLine"
        android:layout_width="40dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="@drawable/remove_line_button_cor"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">


        <TextView
            android:id="@+id/addPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textColor="@color/my_black"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/dp_8"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">


        <TextView
            android:id="@+id/addExpense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addExpense"
            android:textColor="@color/my_black"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/dp_8"
            android:textStyle="bold">

        </TextView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:id="@+id/transferBetween"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/transfer"
            android:textColor="@color/my_black"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/dp_8"
            android:textStyle="bold">

        </TextView>


    </LinearLayout>


</LinearLayout>