<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarUp"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/menu" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avaImageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/wallet_logo" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleAppNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/descriptionAppNameTextView"
        app:layout_constraintStart_toEndOf="@id/avaImageView"
        app:layout_constraintTop_toTopOf="@id/avaImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/descriptionAppNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"

        android:text="@string/descriptionApp"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@id/avaImageView"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/avaImageView"
        app:layout_constraintTop_toBottomOf="@id/titleAppNameTextView" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/avaImageView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewOpenAccount"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/addIcon"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:src="@drawable/ic_add_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/importTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/addNewAccount"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/descriptionImportTextView"
                app:layout_constraintStart_toEndOf="@id/addIcon"
                app:layout_constraintTop_toTopOf="@id/addIcon"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionImportTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_48"
                android:text="@string/descriptionNewAccount"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/addIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/addIcon"
                app:layout_constraintTop_toBottomOf="@id/importTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/importCardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewOpenAccount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/importIcon"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:src="@drawable/ic_import_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/importTextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/importText"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/descriptionImportTextTextView"
                app:layout_constraintStart_toEndOf="@id/importIcon"
                app:layout_constraintTop_toTopOf="@id/importIcon"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionImportTextTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_48"
                android:text="@string/importTextDescription"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/importIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/importIcon"
                app:layout_constraintTop_toBottomOf="@id/importTextTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exportCardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/exportIcon"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:src="@drawable/ic_export_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/exportTextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/exportText"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/descriptionExportTextTextView"
                app:layout_constraintStart_toEndOf="@id/exportIcon"
                app:layout_constraintTop_toTopOf="@id/exportIcon"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionExportTextTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_48"
                android:text="@string/exportTextDescription"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/exportIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/exportIcon"
                app:layout_constraintTop_toBottomOf="@id/exportTextTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>